# axum-backend

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  user_account.rs  user_role.rs
src/: config.rs  errors.rs  main.rs
src/auth_service/: auth_serivce.rs  mod.rs
src/models/: user_models.rs
src/repos/: user_repos.rs
src/routes/: mod.rs  protected_routes.rs  user_routes.rs
